--- a/microapp-config-test.properties
+++ b/microapp-config-test.properties
@@ -3,4 +3,4 @@ from=test-modify
 url=http://localhost:8761/eureka/
 ipAddr=false
 PRODUCT.MODEL=0:A,1:B,2:C,3:D
-spring.sex=0:\u7537,1:\u5973,2:other
+spring.sex=0:\u7537,1:\u5973
